# yate

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in  main.cpp
core/: CMakeLists.txt  corehandler.hpp  document.cpp  document.hpp  documenthandler.hpp  notes.txt  token.hpp
core/api/: CMakeLists.txt  fileio.hpp  idocumentfactory.hpp  ifileio.hpp  ifileiofactory.hpp  iobject.hpp  iuiplugin.hpp  iwrapper.hpp
core/api/src/: fileio.cpp  ifileio.cpp  ifileiofactory.cpp  iobject.cpp  iuiplugin.cpp  iwrapper.cpp
core/interfaces/: icore.hpp  idocument.hpp  iplugin.hpp
core/interfaces/src/: idocument.cpp  idocumentfactory.cpp
core/src/: corehandler.cpp  document.cpp  documenthandler.cpp  token.cpp
plugins/: CMakeLists.txt
plugins/document/: CMakeLists.txt  documentfactory.hpp
plugins/document/cpp_doc/: CMakeLists.txt  cpp_doc.hpp
plugins/document/cpp_doc/src/: cpp_doc.cpp
plugins/document/src/: documentfactory.cpp
plugins/file/: CMakeLists.txt  fileiofactory.hpp  localfileio.hpp
plugins/file/src/: fileiofactory.cpp  localfileio.cpp
plugins/ui/: CMakeLists.txt  uiplugin.hpp
plugins/ui/src/: uiplugin.cpp
plugins/ui/web/: CMakeLists.txt  httpserver.cpp  httpserver.hpp  webui.hpp
plugins/ui/web/frontend/: index.html
plugins/ui/web/frontend/css/: style.css
plugins/ui/web/frontend/js/: main.js
plugins/ui/web/src/: webui.cpp
plugins/ui/web_old/: httpserver.hpp
unittests/: CMakeLists.txt
unittests/core/: CMakeLists.txt  test.cpp
unittests/utils/: CMakeLists.txt  test.cpp  utest_log.cpp  utest_observable.cpp
utils/: CMakeLists.txt  log.hpp  observablesubject.hpp  queue.hpp  threadsafequeue.hpp
utils/src/: log.cpp  observablesubject.cpp  subject.cpp
wrapper/: CMakeLists.txt
wrapper/json/: CMakeLists.txt  jsonwrapper.hpp
wrapper/json/src/: jsonwrapper.cpp
